# Itmo-University

./: .dockerignore  .gitignore  Dockerfile  README.md  graphics.html  index.html  pom.xml  script.js  styles.css
algorithms/A/: main.cpp
algorithms/B/: main.cpp
algorithms/E/: main.cpp
algorithms/F/: main.cpp
algorithms/J/: main.cpp
algorithms/K/: main.cpp
algorithms/graph/: A.java  B.java  C.java  D.java  E.java  F.java  G.cpp  H.java  I.java  J.java  K.cpp  problem.html
coding-theory/J-decoder/: CMakeLists.txt  main.cpp
coding-theory/first-decoder/: CMakeLists.txt  main.cpp
cpp/8-puzzle/: .gitmodules  CMakeLists.txt  README.md
cpp/8-puzzle/.github/workflows/: cpp_project.yml
cpp/8-puzzle/include/: board.h  solver.h
cpp/8-puzzle/src/: board.cpp  main.cpp  solver.cpp
cpp/calc-numeral-systems/: CMakeLists.txt  README.md
cpp/calc-numeral-systems/.github/workflows/: cpp_project.yml
cpp/calc-numeral-systems/include/: calc.h
cpp/calc-numeral-systems/src/: calc.cpp  main.cpp
cpp/calc-numeral-systems/test/: test.cpp
cpp/genome-assembly/: .gitmodules  CMakeLists.txt  README.md
cpp/genome-assembly/.github/workflows/: cpp_project.yml
cpp/genome-assembly/include/: genome.h  graph.h
cpp/genome-assembly/src/: genome.cpp  graph.cpp  main.cpp
cpp/ouch-enter-order/: CMakeLists.txt  README.md
cpp/ouch-enter-order/.github/workflows/: cpp_project.yml
cpp/ouch-enter-order/include/: codec.h  fields.h  fields.inl  new-enter-order.inl  opt-fields.h  requests.h
cpp/ouch-enter-order/src/: main.cpp  requests.cpp
cpp/ouch-enter-order/test/: test.cpp
cpp/second-chance-arbitrary/: .gitmodules  CMakeLists.txt  README.md
cpp/second-chance-arbitrary/.github/workflows/: cpp_project.yml
cpp/second-chance-arbitrary/include/: allocator.h  cache.h  pool.h
cpp/second-chance-arbitrary/src/: main.cpp  pool.cpp
cpp/sort-n-f/: .gitignore  CMakeLists.txt  README.md
cpp/sort-n-f/.github/workflows/: cpp_project.yml
cpp/sort-n-f/src/: main.cpp
cpp/sort-n-f/test/: CMakeLists.txt  Strict.cmake  test-f.sh  test-n.sh  test-nf.sh  test.sh
cpp/sort-n-f/test/etc/: e.txt  e.txt.eta.f  e.txt.eta.n  f.txt  f.txt.eta.f  f.txt.eta.nf
data-analysis/bonus/: README.md  vk_cup.ipynb
data-analysis/lab1/: Lab-1.ipynb  README.md
data-analysis/lab2/: 03-lecture.ipynb  Big_Sleep.ipynb  Lab-2.ipynb  README.md
data-analysis/lab3/: Lab3.ipynb  README.md
data-analysis/lab4/: Lab-4.ipynb  README.md
data-analysis/lab5/: Lab-5.ipynb  README.md
data-analysis/lab6/: README.md
data-analysis/lab7/: README.md
dbms/: start_ctd  start_uni
dbms/CTD/: postmaster.pid
dbms/airlines/: postmaster.pid
dbms/fifth-hw/: 1.1.ra  1.2.ra  2.1.ra  2.2.ra  3.1.ra  3.2.ra  3.3.ra  3.4.ra  3.5.ra  3.6.ra  4.1.ra  4.2.ra  5.1.ra  5.2.ra  5.3.ra  6.1.ra  6.2.ra  6.3.ra  6.4.ra  7.1.ra  7.2.ra
dbms/fourth-hw/: report  report.copy  stu_report
dbms/hw-ten/: 2.0.txt  2.2.txt
dbms/kr-d/: postmaster.pid
dbms/sixth-hw/: 1.1.dl  1.2.dl  1.3.dl  1.4.dl  2.1.dl  2.2.dl  2.3.dl  2.4.dl  2.5.dl  3.1.dl  3.2.dl  4.1.dl  4.2.dl  4.3.dl  5.1.dl  5.2.dl  5.3.dl  5.4.dl  6.1.dl  6.2.dl
dbms/third-hw/: hw
differential-equations/population-model/: README.md
discrete-math/funcs/: A.java  B.scala  C.scala  D.scala  E.scala  F.scala  G.scala  H.scala  I.scala
discrete-math/graphs/: A.cpp  B.cpp  C.cpp  D.java  E.java  F.java  G.java  H.java
discrete-math/matroids/: A.java  B.java  C.java  D.java  E.java  F.java
first-lab/: README.md  build.bat  pom.xml  run.sh
fourth-lab/: README.md
fourth-lab/wolfram/: classic_newton_quadratic_00.txt  classic_newton_quadratic_12.txt  classic_newton_quadratic_21.txt  classic_newton_sin_03.txt  classic_newton_sin_1.txt  classic_newton_sin_minus_pi.txt  descend_quadratic_00.txt  descend_quadratic_12.txt  descend_quadratic_21.txt  descend_sin_03.txt  descend_sin_1.txt  descend_sin_minus_pi.txt  one_direction_quadratic_21.txt  one_direction_sin_1.txt  one_direction_sin_minus_pi.txt
fp/: README.md
fp/homework-0-maxim092001/: README.md
fp/homework-0-maxim092001/hw0/: CHANGELOG.md  hw0.cabal
fp/homework-0-maxim092001/hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
fp/homework-1-maxim092001/: README.md
fp/homework-2-maxim092001/: README.md
fp/homework-2-maxim092001/hw2/: CHANGELOG.md  hw2.cabal
fp/homework-2-maxim092001/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
fp/homework-3-maxim092001/: README.md
fp/homework-3-maxim092001/hw3/: CHANGELOG.md  hw3.cabal
fp/homework-3-maxim092001/hw3/app/: Main.hs
fp/homework-3-maxim092001/hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
java-advanced/: README.md
java-advanced/java-solutions/: module-info.java
java-advanced/scripts/: compile-jar.py
java-advanced/scripts-bank/: compile.py  run-junit.py
linear-algebra/boat/: Boat.py  README.Rmd  README.md
linear-algebra/matrix/: matrix.py
linear-algebra/plane/: main.py
machine-learning/codeforces/: A.java  B.scala  C.scala  D.scala  E.java  G.java  H.scala  K.scala  L.scala  M.java  N.scala  O.scala  P.scala
machine-learning/lab1/: Lab1_ml.ipynb
machine-learning/lab2/: Lab2_ml.ipynb
machine-learning/lab3/: Svm.ipynb
machine-learning/lab4/: Bayes_(1).ipynb
machine-learning/lab5/: 5_ml_dt_pynb.ipynb
machine-learning/lab6/: CNN.ipynb
machine-learning/lab7/: RNN.ipynb
math-optimization/: README.md
math-optimization/first-lab/: Dockerfile  README.md  build.sh  pom.xml  run.bat
math-optimization/fourth-lab/: README.md  (+1 more)
paradigms/: README.md
population/: index.html  index.php  styles.css
prog-intro-homework/: README.md
second-lab/: README.md  pom.xml
second-lab-gui/: functions.py  gui.py  interop.py  main.py  main2.py  merge.py  plot.py  settings.py  vars.py
third-lab/: README.md
trans-methods/third-lab/: CHANGELOG.md  input  output.html  third-lab.cabal
trans-methods/third-lab/app/: Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y
trans-methods/third-lab/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+1497 files in other folders)
