cabal-version:      2.4
name:               third-lab
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Maxim Grankin
maintainer:         maximgran@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable third-lab
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, array
    hs-source-dirs:   app
    default-language: Haskell2010
