cabal-version:      2.4
name:               hw0
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Maxim Grankin
maintainer:         maximgran@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HW0.T1, HW0.T2, HW0.T3, HW0.T4, HW0.T5, HW0.T6

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
