cabal-version:      2.4
name:               hw2
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/fp-ctd-itmo/homework-2-maxim092001

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Maxim Grankin
maintainer:         maximgran@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HW2.T1, HW2.T2, HW2.T3, HW2.T4, HW2.T5, HW2.T6

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, scientific
    hs-source-dirs:   src
    default-language: Haskell2010
