cabal-version:      2.4
name:               hw3
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Maxim Grankin
maintainer:         maximgran@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HW3.Base, HW3.Evaluator, HW3.Parser, HW3.Pretty, HW3.Action

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends: base ^>=4.14.3.0, megaparsec ^>=9.0.1, prettyprinter ^>=1.7.1, prettyprinter-ansi-terminal ^>=1.1.3, haskeline ^>= 0.8.2, parser-combinators ^>=1.2.1, bytestring, text, containers, scientific, transformers, serialise, zlib, directory, time, random
    hs-source-dirs:   src
    default-language: Haskell2010

executable hi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0, megaparsec ^>=9.0.1, prettyprinter ^>=1.7.1, prettyprinter-ansi-terminal ^>=1.1.3, haskeline ^>= 0.8.2, parser-combinators ^>=1.2.1, bytestring, text, containers, scientific, transformers, serialise, zlib, directory, time, random, hw3

    hs-source-dirs:   app
    default-language: Haskell2010
